Dark Mode fixes (#145)
* Move .button into cljs; add dark theming to disabled use button

See #144

* Improve legibility of upcast text/border in the spell list

Fixes #144

--- a/less/site.less
+++ b/less/site.less
@@ -443,34 +443,6 @@ div.p {
     font-size: 80%;
 }
 
-.button {
-    .clickable();
-    border-radius: 2px;
-    background: #999;
-    color: #fff;
-    margin: 0 8px;
-    padding: 8px;
-
-    &:hover {
-        background: #ccc;
-
-        // nested buttons that are disabled should have their
-        // backgrounds overwritten to match ours
-        & .button.disabled {
-            background: #ccc;
-        }
-    }
-    &:active {
-        background: #666666;
-
-        // nested buttons that are disabled should have their
-        // backgrounds overwritten to match ours
-        & .button.disabled {
-            background: #666666;
-        }
-    }
-}
-
 .expandable {
     width: 100%;
 
